--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-compliance: yes
-<br />
-soar: no
+<div style="background-color: #004589;">
+  <div style="color: #F2BB0D">
+    compliance: yes
+    <br />
+    soar: no
+  </div>
+</div>
