--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <div style="background-color: #004589;">
   <div style="color: #F2BB0D">
-    compliance: yes
+    compliance: no
     <br />
-    soar: no
+    soar: yes
   </div>
 </div>
