update styling and the sprint ending

--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<div style="background-color: #004589;">
-  <div style="color: #F2BB0D">
-    compliance: no
-    <br />
-    soar: no
-  </div>
-</div>
+yes
